Adding news and story sections

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -70,3 +70,5 @@
 @import 'components/hero';
 @import 'components/expertise';
 @import 'components/athletes';
+@import 'components/story';
+@import 'components/news';
