--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -8,5 +8,79 @@
         </p>
       </div>
     </div>
+    <div class="grid-x grid-padding-x">
+      <div class="cell large-6 news_icons">
+        <div class="grid-x grid-margin-x">
+          <div class="cell medium-4 news_icon active" data-id="1">
+            <img class="news_icon"/>
+          </div>
+          <div class="cell medium-4 news_icon" data-id="2">
+            <img class="news_icon"/>
+          </div>
+          <div class="cell medium-4 news_icon" data-id="3">
+            <img class="news_icon"/>
+          </div>
+          <div class="cell medium-4 news_icon" data-id="4">
+            <img class="news_icon"/>
+          </div>
+          <div class="cell medium-4 news_icon" data-id="5">
+            <img class="news_icon"/>
+          </div>
+          <div class="cell medium-4 news_icon" data-id="6">
+            <img class="news_icon"/>
+          </div>
+        </div>
+      </div>
+      <div class="cell large-6 news_cards">
+        <div class="news_card active" data-card="1">
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
+          </p>
+          <p class="news_card-attribution">
+            - Name, Publication
+          </p>
+        </div>
+        <div class="news_card" data-card="2">
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
+          </p>
+          <p class="news_card-attribution">
+            - Name, Publication
+          </p>
+        </div>
+        <div class="news_card" data-card="3">
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
+          </p>
+          <p class="news_card-attribution">
+            - Name, Publication
+          </p>
+        </div>
+        <div class="news_card" data-card="4">
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
+          </p>
+          <p class="news_card-attribution">
+            - Name, Publication
+          </p>
+        </div>
+        <div class="news_card" data-card="5">
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
+          </p>
+          <p class="news_card-attribution">
+            - Name, Publication
+          </p>
+        </div>
+        <div class="news_card" data-card="6">
+          <p>
+            "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
+          </p>
+          <p class="news_card-attribution">
+            - Name, Publication
+          </p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
