--- a/src/partials/athletes.html
+++ b/src/partials/athletes.html
@@ -4,7 +4,9 @@
       <div class="cell medium-8 medium-offset-2">
         <h2>The Athletes</h2>
         <p>
-            Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora…
+             
+          We work together with: Athletes, Coaches Teams, Agencies, Organizational Professionals, and Parents. Simply put everyone who wants to take the next step to reach their full potential
+
         </p>
       </div>
     </div>
@@ -12,7 +14,7 @@
     <div class="grid-x">
       <div class="cell medium-12 athletes_carousel owl-carousel">
         <div class="athletes_carousel-item">
-          <div class="carousel_item-background" style="background-image: url('/assets/img/nico-thumb.png');"></div>
+          <div class="carousel_item-background" style="background-image: url('/assets/img/nico.png');"></div>
           
           <div class="carousel_item-static">
             <h3>Nico Prien</h3>
@@ -21,7 +23,7 @@
           <div class="carousel_item-hover">
             <h3>Nico Prien</h3>
             <p>
-              Nico Prien is German windsurfer. Actually, Nico is the German Champion, competing as one of the only professionals at the national and world events during the same year.
+                "In windsurfing you don’t have trainers, you don’t get support from your club and you don’t have anybody guiding your way. For years I’ve been struggling with structuring my day and training program on a professional level. Thanks to Fabian’s help I’m finally getting more efficient with the things I have to get done on a daily basis and I now know better what things to focus on."
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
@@ -30,7 +32,7 @@
         </div>
 
         <div class="athletes_carousel-item">
-          <div class="carousel_item-background" style="background-image: url('/assets/img/nico-thumb.png');"></div>
+          <div class="carousel_item-background" style="background-image: url('/assets/img/maurice.png');"></div>
 
           <div class="carousel_item-static">
             <h3>Maurice “Amazing” Stückenschneider</h3>
@@ -38,7 +40,7 @@
           <div class="carousel_item-hover">
             <h3>Maurice Stückenschneider</h3>
             <p>
-              Nico Prien is German windsurfer. Actually, Nico is the German Champion, competing as one of the only professionals at the national and world events during the same year.
+              "Being a sports psychologist by title is one thing, being one by heart is another. Very few people in the entire industry even come close to the work ethic, passion and compassion that Fabian carries over into every single day of work which enabled me to be the very best version of my professional self."
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
@@ -47,13 +49,13 @@
         </div>
 
         <div class="athletes_carousel-item">
-          <div class="carousel_item-background" style="background-image: url('/assets/img/nico-thumb.png');"></div>
+          <div class="carousel_item-background" style="background-image: url('/assets/img/Elias.jpg');"></div>
 
           <div class="carousel_item-static">
             <h3>Elias “Upset” Lipp</h3>
           </div>
           <div class="carousel_item-hover">
-            <h3>Elias Lipp</h3>
+            <h3>Elias “Upset” Lipp</h3>
             <p>
               Nico Prien is German windsurfer. Actually, Nico is the German Champion, competing as one of the only professionals at the national and world events during the same year.
             </p>
@@ -64,21 +66,39 @@
         </div>
 
         <div class="athletes_carousel-item">
-          <div class="carousel_item-background" style="background-image: url('/assets/img/nico-thumb.png');"></div>
+          <div class="carousel_item-background" style="background-image: url('/assets/img/steve.jpeg');"></div>
           
           <div class="carousel_item-static">
-            <h3>Maurice “Amazing” Stückenschneider</h3>
+            <h3>Steve Voltz</h3>
           </div>
           <div class="carousel_item-hover">
-            <h3>Maurice Stückenschneider</h3>
+            <h3>Steve Voltz</h3>
             <p>
-              Nico Prien is German windsurfer. Actually, Nico is the German Champion, competing as one of the only professionals at the national and world events during the same year.
+              "Working with Fabian was a truly educational and enriching experience for our athletes and our coaching staff. His insight into the demands of a young university athlete helped not only them to address some of their struggles with a better understanding of themselves, but it also prepared us coaches to be better equipped in supporting our players."
+
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
             </a>
           </div>
         </div>
+
+        <div class="athletes_carousel-item">
+            <div class="carousel_item-background" style="background-image: url('/assets/img/lukas1.jpg');"></div>
+  
+            <div class="carousel_item-static">
+              <h3>Lukas "Idealz" Schmandt</h3>
+            </div>
+            <div class="carousel_item-hover">
+              <h3>Lukas "Idealz" Schmandt</h3>
+              <p>
+                  "From Fabian I have learned that esport is a mental game. It‘s not about the time you invest it‘s about the way you do things."
+              </p>
+              <a class="carousel_item-open-modal open-modal">
+                See more
+              </a>
+            </div>
+          </div>
       </div>
     </div>
   </div>
