--- a/src/partials/expertise.html
+++ b/src/partials/expertise.html
@@ -4,7 +4,8 @@
       <div class="cell medium-6 medium-offset-3">
         <h2>Our expertise lays in</h2>
         <p>
-          There is no easy way to success        
+          There is no easy way to success but no worries, we will be with you every step of the way, no matter what obstacles or setbacks occur, we will help you to cope with these challenges. Our belief is that a strong mindset will overrule talent, so we are determined to continuously help you to become a better version of yourself. 
+        
         </p>
       </div>
     </div>
