--- a/src/partials/story.html
+++ b/src/partials/story.html
@@ -6,7 +6,11 @@
       <div class="medium-6 cell story_content">
         <h2>The Origin Story</h1>
         <p>
-          Starting my sports career with table tennis achanging to football starting as a bench player to become a starter to make it to semi-pros and professional goalkeeper.During his journey he had the privilege to play in 12 clubs, 3 countries and 2 continents. His experiences showed him the competitiveness and mentality on first hand experiences. Even though through his achievements, there were many setbacks and obstacles. These issues made him curious about the mental side of the game, to improve sleep, nutrients, regeneration and practice which led to a BA degree in Psychology (US) and Sports Psychology Master (Germany)          
+          &nbsp;
+          Starting my sports career with table tennis changing to football starting as a bench player to become a starter to make it to semi-pros and professional level. During my journey I had the privilege to play in 12 clubs, 3 countries and 2 continents. These experiences showed me the competitiveness and mentality on first hand experiences. Even though through my achievements, there were many setbacks and obstacles. These issues made me curious about the mental side of the game, to improve sleep, nutrients, regeneration and practice which led to a BA degree in Psychology (US) and Sports Psychology Master (Germany)...
+          &nbsp;
+          Living through my ups and downs combined with his academic background, I want to bring you back to your roots, strengths, focus and happiness in order to reach the optimal performance and well-being.
+       
         </p>
         <img class="story_mobile-image" src="/assets/img/story_image.png" />
       </div>
