--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -45,7 +45,7 @@
     padding: 24px 32px;
     background-color: $gold;
     @include default-border;
-   
+
     p {
       color: white;
       font-size: rem-calc(18);
@@ -86,6 +86,31 @@
         width: 20%;
         text-align: left;
       }
+    }
+  }
+
+  .hero_bg-element {
+    display: block;
+    z-index: 1;
+    position: absolute;
+    bottom: -75px;
+    right: -25px;
+    height: 175px;
+    width: 175px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-image: url('/assets/img/pixelated-bars.svg');
+
+    @include breakpoint(medium) {
+      height: 222px;
+      width: 208px;
+      right: 10%;
+      bottom: -90px;
+    }
+
+    @include breakpoint(large) {
+      right: 25%;
+      bottom: -120px;
     }
   }
 }
