--- a/src/partials/expertise.html
+++ b/src/partials/expertise.html
@@ -1,5 +1,9 @@
 <section class="expertise">
+
   <div class="grid-container">
+    <div class="expertise_bg-element-1"></div>
+    <div class="expertise_bg-element-2"></div>
+    
     <div class="grid-x expertise_header">
       <div class="cell medium-6 medium-offset-3">
         <h2>Our expertise lays in</h2>
