--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,6 @@
 <section class="hero">
     <div class="hero_image show-for-medium"></div>
+    <div class="hero_bg-element"></div>
     <div class="grid-container">
       <div class="grid-x grid-padding-x">
         <div class="medium-6 cell">
