--- a/src/partials/story.html
+++ b/src/partials/story.html
@@ -2,6 +2,9 @@
   <div class="story_image show-for-medium"></div>
 
   <div class="grid-container">
+    <div class="story_bg-element-1"></div>
+    <div class="story_bg-element-2"></div>
+
     <div class="grid-x grid-padding-x">
       <div class="medium-6 cell story_content">
         <h2>The Origin Story</h1>
