--- a/src/partials/athletes.html
+++ b/src/partials/athletes.html
@@ -1,5 +1,9 @@
 <section class="athletes">
   <div class="grid-container">
+    <div class="athletes_bg-element-1"></div>
+    <div class="athletes_bg-element-2"></div>
+    <div class="athletes_bg-element-3"></div>
+
     <div class="grid-x athletes_header">
       <div class="cell medium-8 medium-offset-2">
         <h2>The Athletes</h2>
