--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -10,6 +10,10 @@
   .footer_logo {
     margin-bottom: 32px;
 
+    img {
+      height: 90px;
+    }
+
     @include breakpoint(medium) {
       margin-bottom: 0px;
     }
