--- a/src/partials/athletes.html
+++ b/src/partials/athletes.html
@@ -1,4 +1,4 @@
-<section class="athletes">
+<section id="athletes" class="athletes">
   <div class="grid-container">
     <div class="athletes_bg-element-1"></div>
     <div class="athletes_bg-element-2"></div>
