--- a/src/partials/expertise.html
+++ b/src/partials/expertise.html
@@ -1,4 +1,4 @@
-<section class="expertise">
+<section id="expertise" class="expertise">
 
   <div class="grid-container">
     <div class="expertise_bg-element-1"></div>
