--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="grid-container">
       <div class="grid-x footer_grid">
         <div class="cell small-12 medium-5 footer_logo">
-          LOGO
+          <img src="/assets/img/logo-dark.svg"/>
         </div>
         
         <div class="cell small-12 medium-3 medium-offset-1 footer_menu">
