--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -17,7 +17,7 @@
             </p>
           </div>
           <div class="hero_contact">
-            <a class="hero_link">Contact Me</a>
+            <a href="#contact" class="nav_link hero_link">Contact Me</a>
           </div>
         </div>
       </div>
