--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,4 +1,4 @@
-<section class="news">
+<section id="news" class="news">
   <div class="grid-container">
     <div class="grid-x news_header">
       <div class="cell medium-8 medium-offset-2">
@@ -9,7 +9,7 @@
       </div>
     </div>
     <div class="grid-x grid-padding-x">
-      <div class="cell large-6 news_icons">
+      <div class="cell medium-8 medium-offset-2 news_icons">
         <div class="grid-x grid-margin-x">
           <div class="cell medium-4 news_icon active" data-id="1">
             <img class="news_icon"/>
@@ -31,7 +31,7 @@
           </div>
         </div>
       </div>
-      <div class="cell large-6 news_cards">
+      <!-- <div class="cell large-6 news_cards">
         <div class="news_card active" data-card="1">
           <p>
             "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae"
@@ -80,7 +80,7 @@
             - Name, Publication
           </p>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
