--- a/src/partials/story.html
+++ b/src/partials/story.html
@@ -1,4 +1,4 @@
-<section class="story">
+<section id="origin" class="story">
   <div class="story_image show-for-medium"></div>
 
   <div class="grid-container">
