--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -85,6 +85,10 @@
         float: right;
         width: 20%;
         text-align: left;
+
+        a {
+          margin-top: 32px;
+        }
       }
     }
   }
