--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -13,6 +13,8 @@
 <body>
 
 {{!-- Pages you create in the src/pages/ folder are inserted here when the flattened page is created. --}}
+{{> header}}
+
 {{> body}}
 
 {{> footer}}
