--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -1,4 +1,4 @@
-<section class="contact">
+<section id="contact" class="contact">
   <div class="grid-container">
     <div class="grid-x grid-padding-x contact_grid">
       <div class="cell medium-6 large-6 contact_form-container">
