Adding news images and updating the form

--- a/src/partials/contact.html
+++ b/src/partials/contact.html
@@ -11,7 +11,7 @@
             <div class="grid-x grid-margin-x">
               <div class="cell small-12">
                 <label>Email
-                  <input type="text" placeholder="yourname@yahoo.com" aria-errormessage="example1Error1" required pattern="email">
+                  <input type="text" name="email" placeholder="yourname@yahoo.com" aria-errormessage="example1Error1" required pattern="email">
                   <span class="form-error" id="example1Error1">
                     Please enter a valid email address.
                   </span>
@@ -19,7 +19,7 @@
               </div>
               <div class="cell small-12">
                 <label>Name
-                  <input type="text" id="name" placeholder="Your Name" aria-errormessage="example1Error2" required >
+                  <input type="text" id="name" name="name" placeholder="Your Name" aria-errormessage="example1Error2" required >
                   <span class="form-error" id="example1Error2">
                     Please enter your name
                   </span>
@@ -29,7 +29,7 @@
             <div class="cell small-12">
               <label>
                 Message
-                <textarea rows="4" placeholder="Your message here..." aria-errormessage="example1Error3" required></textarea>
+                <textarea rows="4" name="message" placeholder="Your message here..." aria-errormessage="example1Error3" required></textarea>
                 <span class="form-error" id="example1Error3">
                   Please enter your name
                 </span>
