--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -9,25 +9,25 @@
       </div>
     </div>
     <div class="grid-x grid-padding-x">
-      <div class="cell medium-8 medium-offset-2 news_icons">
-        <div class="grid-x grid-margin-x">
-          <div class="cell medium-4 news_icon active" data-id="1">
-            <img class="news_icon"/>
+      <div class="cell medium-8 medium-offset-2 news_icons align-middle">
+        <div class="grid-x grid-margin-x align-middle">
+          <div class="cell medium-3 news_icon active" data-id="1">
+            <a href="#" class="align-self-middle">
+              <img class="news_icon-image" src="/assets/img/sport1.png"/>
+            </a> 
           </div>
-          <div class="cell medium-4 news_icon" data-id="2">
-            <img class="news_icon"/>
+          <div class="cell medium-3 news_icon" data-id="2">
+            <a href="#">
+              <img class="news_icon-image" src="/assets/img/shotcaller.png"/>
+            </a>
           </div>
-          <div class="cell medium-4 news_icon" data-id="3">
-            <img class="news_icon"/>
+          <div class="cell medium-3 news_icon" data-id="3">
+            <a href="#">  
+              <img class="news_icon-image" src="/assets/img/new-york-times.png"/>
+            </a>
           </div>
-          <div class="cell medium-4 news_icon" data-id="4">
-            <img class="news_icon"/>
-          </div>
-          <div class="cell medium-4 news_icon" data-id="5">
-            <img class="news_icon"/>
-          </div>
-          <div class="cell medium-4 news_icon" data-id="6">
-            <img class="news_icon"/>
+          <div class="cell medium-3 news_icon" data-id="4">
+            <a>ZEPP FM</a>
           </div>
         </div>
       </div>
