--- a/src/assets/scss/components/_news.scss
+++ b/src/assets/scss/components/_news.scss
@@ -17,14 +17,28 @@ section.news {
 
   
   .news_icons {
-    display: none;
+    display: block;
+    text-align: center;
+   
+    .news_icon {
+      position: relative;
+    }
+    a {
+      
 
+      img {
+
+        max-width: 150px;
+        max-height: 150px;
+      }
+    }
+    
     @include breakpoint(medium) {
       display: block;
 
       .news_icon {
         margin-bottom: 30px;
-        @include default-shadow;
+        // @include default-shadow;
         border-radius: 3px;
         height: 75px;
       }
