Adding social icons

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -16,9 +16,9 @@
         <div class="cell small-12 medium-3 footer_social">
           <h4>Connect With Me</h4>
           <nav class="social">
-            <i class="social_item facebook"></i>
-            <i class="social_item instagram"></i>
-            <i class="social_item twitter"></i>
+            <a href="#"><i class="social_item facebook"></i></a>
+            <a href="#"><i class="social_item instagram"></i></a>
+            <a href="#"><i class="social_item twitter"></i></a>            
           </nav>
         </div>
       </div>
