--- a/src/assets/scss/components/_footer.scss
+++ b/src/assets/scss/components/_footer.scss
@@ -47,9 +47,21 @@
       .social_item {
         display: inline-block;
         margin-right: 12px;
+        height: 24px;
+        width: 24px;
         background-size: contain;
         background-position: center center;
         background-repeat: no-repeat;
+      
+        &.facebook {
+          background-image: url('/assets/img/facebook.svg');
+        }
+        &.twitter {
+          background-image: url('/assets/img/twitter.svg');
+        }
+        &.instagram {
+          background-image: url('/assets/img/instagram.svg');
+        }
       }
     }
   }
