--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -4,8 +4,8 @@
       <div class="header_logo">
         <img src="/assets/img/logo-nav.svg" />
       </div>
-      <div class="top-bar-left">
-        <img class="logo-dark" src="/assets/img/logo-dark.svg" />
+      <div class="top-bar-left align-left">
+        <img class="logo-dark align-left" src="/assets/img/logo-dark.svg" />
       </div>
       <div class="top-bar-right">
         <ul class="menu">
