Added the links on the footer and the press section.

--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -4,7 +4,7 @@
       <div class="cell medium-8 medium-offset-2">
         <h2>On the News</h2>
         <p>
-          Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.        
+          Want to read get some more information about our work? Here are some links that you can check out and learn how our approach can change the way you think and help you reach new heights.       
         </p>
       </div>
     </div>
@@ -12,22 +12,22 @@
       <div class="cell medium-8 medium-offset-2 news_icons align-middle">
         <div class="grid-x grid-margin-x align-middle">
           <div class="cell medium-3 news_icon active" data-id="1">
-            <a href="#" class="align-self-middle">
+            <a href="https://www.sport1.de/tv-video/video/lec-deutsches-interview-mit-assistant-coach-fabian-broich-von-origen__812A88F6-1B94-D7E7-68C6-48CD4A62C691" class="align-self-middle">
               <img class="news_icon-image" src="/assets/img/sport1.png"/>
             </a> 
           </div>
           <div class="cell medium-3 news_icon" data-id="2">
-            <a href="#">
+            <a href="https://www.youtube.com/watch?v=jxcTI79yaiY">
               <img class="news_icon-image" src="/assets/img/shotcaller.png"/>
             </a>
           </div>
           <div class="cell medium-3 news_icon" data-id="3">
-            <a href="#">  
+            <a href="https://www.nytimes.com/2019/04/02/sports/esports-league-of-legends.html ">  
               <img class="news_icon-image" src="/assets/img/new-york-times.png"/>
             </a>
           </div>
           <div class="cell medium-3 news_icon" data-id="4">
-            <a>ZEPP FM</a>
+            <a href=" https://www.christianzepp.com/en/podcast16/">ZEPP FM</a>
           </div>
         </div>
       </div>
