--- a/src/assets/scss/components/_hero.scss
+++ b/src/assets/scss/components/_hero.scss
@@ -33,7 +33,7 @@
     right: 0px;
     bottom: -32px;
     left: 50%;
-    background-image: url('/assets/img/hero_image.png');
+    background-image: url('/assets/img/fabro.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
