--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,18 +7,18 @@
         </div>
         
         <div class="cell small-12 medium-3 medium-offset-1 footer_menu">
-          <a class="menu-item">Achievements</a>
-          <a class="menu-item">The Origin</a>
-          <a class="menu-item">Athletes</a>
-          <a class="menu-item">Press</a>
+          <a class="nav_link menu-item" href="#expertise">Achievements</a>
+          <a class="nav_link menu-item" href="#origin">The Origin</a>
+          <a class="nav_link menu-item" href="#athletes">Athletes</a>
+          <a class="nav_link menu-item" href="#news">Press</a>
         </div>
        
         <div class="cell small-12 medium-3 footer_social">
           <h4>Connect With Me</h4>
           <nav class="social">
             <a href="#"><i class="social_item facebook"></i></a>
-            <a href="#"><i class="social_item instagram"></i></a>
-            <a href="#"><i class="social_item twitter"></i></a>            
+            <a href="https://www.instagram.com/esportspsychology/"><i class="social_item instagram"></i></a>
+            <a href="https://twitter.com/SportsPsycFaBro"><i class="social_item twitter"></i></a>            
           </nav>
         </div>
       </div>
