New athlete added as well

--- a/src/partials/athletes.html
+++ b/src/partials/athletes.html
@@ -61,7 +61,7 @@
           <div class="carousel_item-hover">
             <h3>Elias “Upset” Lipp</h3>
             <p>
-              Nico Prien is German windsurfer. Actually, Nico is the German Champion, competing as one of the only professionals at the national and world events during the same year.
+              "Always positive and supportive person, helping you reach your best performance and also a good and trustworthy friend."
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
@@ -97,6 +97,23 @@
               <h3>Lukas "Idealz" Schmandt</h3>
               <p>
                   "From Fabian I have learned that esport is a mental game. It‘s not about the time you invest it‘s about the way you do things."
+              </p>
+              <a class="carousel_item-open-modal open-modal">
+                See more
+              </a>
+            </div>
+          </div>
+
+          <div class="athletes_carousel-item">
+            <div class="carousel_item-background" style="background-image: url('/assets/img/andri.jpg');"></div>
+  
+            <div class="carousel_item-static">
+              <h3>Andri Runar</h3>
+            </div>
+            <div class="carousel_item-hover">
+              <h3>Andri Runar</h3>
+              <p>
+                  "I started working with Fabian in the fall of 2016 and that is when my career truly begins. We started off with setting up goals, big and small goals. Some of them went on being part of my every day routine. We now talk every gameday and about once a week in addintion to that. If you want to become a better athlete and a better person then Fabian is the best there is to help you."
               </p>
               <a class="carousel_item-open-modal open-modal">
                 See more
