--- a/src/partials/athletes.html
+++ b/src/partials/athletes.html
@@ -9,7 +9,7 @@
         <h2>The Athletes</h2>
         <p>
              
-          We work together with: Athletes, Coaches Teams, Agencies, Organizational Professionals, and Parents. Simply put everyone who wants to take the next step to reach their full potential
+          We work together with: Athletes, Coaches, Teams, Agencies and Organizational Professionals. Simply put everyone who wants to take the next step to reach their full potential
 
         </p>
       </div>
