more text changes

--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -4,7 +4,7 @@
       <div class="cell medium-8 medium-offset-2">
         <h2>On the News</h2>
         <p>
-          Want to read get some more information about our work? Here are some links that you can check out and learn how our approach can change the way you think and help you reach new heights.       
+          Want to get some more information about our work? Here are some links that you can check out and learn how our approach can change the way you think and help you reach new heights.       
         </p>
       </div>
     </div>
