Changes made to text

--- a/src/partials/athletes.html
+++ b/src/partials/athletes.html
@@ -28,6 +28,8 @@
             <h3>Nico Prien</h3>
             <p>
                 "In windsurfing you don’t have trainers, you don’t get support from your club and you don’t have anybody guiding your way. For years I’ve been struggling with structuring my day and training program on a professional level. Thanks to Fabian’s help I’m finally getting more efficient with the things I have to get done on a daily basis and I now know better what things to focus on."
+                <br><br>
+                <strong>Professional Windsurfer, Germany Champion Overall and Foiling</strong>
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
@@ -45,6 +47,8 @@
             <h3>Maurice Stückenschneider</h3>
             <p>
               "Being a sports psychologist by title is one thing, being one by heart is another. Very few people in the entire industry even come close to the work ethic, passion and compassion that Fabian carries over into every single day of work which enabled me to be the very best version of my professional self."
+              <br><br>
+              <strong>Professional League of Legends Player, Currently at 100 Thieves (USA)</strong>
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
@@ -62,6 +66,8 @@
             <h3>Elias “Upset” Lipp</h3>
             <p>
               "Always positive and supportive person, helping you reach your best performance and also a good and trustworthy friend."
+              <br><br>
+              <strong>Professional League of Legends Player, Currently at Schalke 04 (USA)</strong>
             </p>
             <a class="carousel_item-open-modal open-modal">
               See more
@@ -79,6 +85,8 @@
             <h3>Steve Voltz</h3>
             <p>
               "Working with Fabian was a truly educational and enriching experience for our athletes and our coaching staff. His insight into the demands of a young university athlete helped not only them to address some of their struggles with a better understanding of themselves, but it also prepared us coaches to be better equipped in supporting our players."
+              <br><br>
+              <strong>Mens Soccer Head Coach at Milsaps College (USA)</strong>
 
             </p>
             <a class="carousel_item-open-modal open-modal">
@@ -97,6 +105,8 @@
               <h3>Lukas "Idealz" Schmandt</h3>
               <p>
                   "From Fabian I have learned that esport is a mental game. It‘s not about the time you invest it‘s about the way you do things."
+                  <br><br>
+                  <strong>Professional FIFA Player</strong>
               </p>
               <a class="carousel_item-open-modal open-modal">
                 See more
@@ -114,6 +124,8 @@
               <h3>Andri Runar</h3>
               <p>
                   "I started working with Fabian in the fall of 2016 and that is when my career truly begins. We started off with setting up goals, big and small goals. Some of them went on being part of my every day routine. We now talk every gameday and about once a week in addintion to that. If you want to become a better athlete and a better person then Fabian is the best there is to help you."
+                  <br><br>
+                  <strong>Striker for 1. FC Kaiserslautern, and Iceland National Team</strong>
               </p>
               <a class="carousel_item-open-modal open-modal">
                 See more
