--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,10 +2,10 @@
   <div class="grid-container">
     <div class="top-bar">
       <div class="header_logo">
-        <img src="/assets/img/logo-nav.svg" />
+        <img src="/assets/img/logoNew.svg" />
       </div>
       <div class="top-bar-left align-left">
-        <img class="logo-dark align-left" src="/assets/img/logo-dark.svg" />
+        <img class="logo-dark align-left" src="/assets/img/logoNew-dark.svg" />
       </div>
       <div class="top-bar-right">
         <ul class="menu">
