--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -85,7 +85,7 @@ $white: #fff;
 $off-white: #f7f7f7;
 $body-background: $white;
 $body-font-color: $black;
-$body-font-family: 'Cardo', serif;
+$body-font-family: 'tinos', serif;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
